<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="app_name">Nice Gesture</string>
<string name="idlelabel">Configuração quando ocioso</string>

<string name="enabled">Nice Gesture habilitado</string>
<string name="disabled">Nice Gesture desabilitado</string>

<string name="guard_on">Lockscreen mostrado quando despertar com deslizar</string>
<string name="guard_off">Sempre auto-destravar</string>

<string name="auto_on">Sempre auto-destravar</string>
<string name="auto_off">Auto-destravar SOMENTE quando despertar com deslizar</string>

<string name="fg_on">Notificação será exibida</string>
<string name="fg_off">Notificação em andamento está desativada</string>

<string name="sec_on">HABILITADO- O padrão definido será desativado enquanto Nice Gesture está ativo</string>
<string name="sec_off">DISABILITADO- Definir um padrão de segurança a partir das preferências do sistema</string>

<string name="basictitle">Auto-destravar</string>
<string name="basicsummary">Você pode ver os elementos visuais de Nice Gesture quando um aplicativo mais lento estiver restaurando.</string>
<string name="hiddentitle">Esconder elementos visuais da lockscreen</string>
<string name="hiddensummary">Quando um aplicativo mais lento estiver restaurando, uma mensagem de progresso será exibida.</string>
<string name="unguardtitle">Avançado</string>
<string name="unguardsummary">Despertar com todas os botões- pressione duplamente qualquer botão para destravar</string>

<string name="howto_title">Como usar Nice Gesture</string>
<string name="HowToFull">Nice Gesture automaticamente minimiza a lockscreen. Por padrão, os botões laterais permanecem bloqueados, mas despertar o telefone com o slider, botões do teclado, ou botão liga/desliga irá auto desbloquear. Modo avançado habilita todos os botões para despertar e qualquer pressionamento duplo para destravar.
Se o celular reiniciar enquanto Nice Gesture estiver executando, ele começará um back up automaticamente com suas configurações preferidas. Não tente mudar o padrão de segurança ou criar um enquanto Nice Gesture estiver habilitado. Sempre desselecione habilitado primeiro. </string>

<string name="idlehowto">Cada vez que o celular apaga, o temporizador começa. Se deixado apagado por um tempo determinado, o padrão de segurança é restaurado, desabilitando Nice Gesture. Quando o padrão for destravado, Nice Gesture irá se reiniciar. Deverá haver um padrão habilitado e definir Nice Gesture para o modo seguro antes de ligar a trava de ocioso.</string>

<string name="ts_title">Ajuda com problemas</string>
<string name="Troubleshooting">Por favor veja nosso FAQ e páginas de solução de problemas nos links do site (http://mylockandroid.blogspot.com) primeiro. Se notar um problema que acontece de forma consistente, faça download do Log Collector (se encontra no Google Play gratuitamente) para então nos mandar um email para myLockandroid@gmail.com. Tenha certeza de listar os sintomas do problema e quais outros serviços estão executando em Settings->Applications->Running Services screen. Nós iremos procurar a causa do problema e corrigi-lo quando possível.</string>

<string name="permlab_toggle">Permissões de plug-ins do Nice Gesture</string>
<string name="permdesc_toggle">Permitir que plug-ins ativem e desativem Nice Gesture</string>

<string name="userlabel">Nice Gesture</string>

<string name="textButton01">Calculadora</string>
<string name="textButton02">Câmera</string>
<string name="textButton03">Browser</string>
<string name="textButton04">Gmail</string>
<string name="textButton05">Facebook</string>
<string name="textButton06">Messages</string>

</resources>
